@@ -15,6 +15,8 @@ Release CMTK-1.0.1:
 - Added: established infrastructure for optional algorithm validation,
     beginning with rigid registration. All validation tools must be activated
     via the "BUILD_VALIDATION" option of the top-level CMakeLists.txt file
+- Added: tools for rigid registration validation using data from the
+    Retrospective Image Registration Evaluation project.
 - Added: "registration" tool now supports on-the-fly Sobel edge filtering, and
     histogram equalization was unified with "warp" tool's.
 
